my commit of 17-04-2024

--- a/contact/index.html
+++ b/contact/index.html
@@ -83,7 +83,10 @@
 
             <form class="contact__form" action="https://formsubmit.co/hello@guidigit.com" method="POST">
 
-                                    <div class="contact__form__container">
+                                    <input type="hidden" name="_next" value="https://guidigit.com/contact/message-envoye.html">
+                <input type="hidden" name="_subject" value="Clients">
+
+                <div class="contact__form__container">
                     <label for="prenom">Votre Prénom :</label>
                     <input type="text" id="prenom" name="prenom" placeholder="Prénom" required>
                 </div>
