--- a/contact/message-envoye.html
+++ b/contact/message-envoye.html
@@ -7,26 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="GuiDigit">
 
-    <meta name="keywords" content="Transformation digitale, Formation en Excel, Développement web, Entreprise informatique en Guinée">
-    <meta name="description" content="Gestion de la Transformation digitale de votre entreprise. Des applications de gestion et des sites web. Des Formations avec GuiDigit">
-
-        <meta property="og:title" content="La Transformation digitale avec Guidigit" />
-    <meta property="og:description" content="La Transformation digitale pour une productivité optimale des employés." />
-    <meta property="og:url" content="https://www.guidigit.com/contact/carriere.html"/>
-    <meta property="og:type" content="website" />
-    <meta property="og:locale" content="fr_FR" />
-    <meta property="og:site_name" content="GuiDigit" />
-    <meta property="og:image" content="../assets/home-guidigit-og.jpg" />
-    <meta property="og:image:width" content="1200"/>
-    <meta property="og:image:height" content="630"/>
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@guidigit" />
-    <meta name="twitter:creator" content="@guidigit" />
-    <meta property="twitter:title" content="La Transformation digitale avec Guidigit" />
-    <meta property="twitter:description" content="La Transformation digitale pour une productivité optimale des employés." />
-    <meta property="twitter:image" content="../assets/home-guidigit-og.jpg" />
-    <meta property="twitter:url" content="https://www.guidigit.com/contact/carriere.html"/>
-
     <link rel="shortcut icon" type="image/png" href="../assets/guidigit-favicon-192.png">
     <link rel="shortcut icon" sizes="192x192" href="../assets/guidigit-favicon-192.png">
     <link rel="apple-touch-icon" href="../assets/guidigit-favicon-192.png">
@@ -71,71 +51,12 @@
 
 
         <main class="wrapper main">
-        <h1 class="main__title">Commencez Une Carrière Avec Nous</h1>
+        <h1 class="main__title">Message Envoyé</h1>
     </main>
 
-    <section class="wrapper">
-        <div class="contact">
-
-        <p>Nous avons hate d'en savoir un peu plus sur vous. Appelez nous au <strong>+224 610 38 22 65</strong> ou envoyez un e-mail à <strong>hello@guidigit.com</strong>. Vous pouvez aussi remplir le formulaire ci-dessous.</p>
-
-            <form class="contact__form" action="https://formsubmit.co/hello@guidigit.com" method="POST">
-
-                        <input type="hidden" name="_next" value="https://guidigit.com/contact/message-envoye.html">
-            <input type="hidden" name="_subject" value="Carrière">
-
-            <div class="contact__form__container">
-                <label for="prenom">Votre Prénom :</label>
-                <input type="text" id="prenom" name="prenom" placeholder="Prénom" required>
-            </div>
-
-            <div class="contact__form__container">
-                <label for="nom">Nom :</label>
-                <input type="text" id="nom" name="nom" placeholder="Nom" required>
-            </div>
-
-            <div class="contact__form__container">
-                <label for="email">Votre E-mail :</label>
-                <input type="email" name="email" id="email" placeholder="Email" required>
-                <small>
-                    Cet email ne sera utilisé que pour vous contacter.
-                </small>
-            </div>
-
-            <div class="contact__form__container">
-                <label for="phone">Votre Numéro de Téléphone :</label>
-                    <input type="number" name="phone" placeholder="Téléphone" id="phone" required>
-                <small>
-                    Ce numéro ne sera utilisé que pour vous contacter.
-                </small>
-            </div>
-
-            <div class="contact__form__container">
-                <label for="domaine">Choisir Votre Domaine :</label>
-                <select name="domaine" id="domaine" required>
-                    <option value="" selected="true" disabled="disabled">Votre Domaine</option>
-                    <option value="Excel">Spécialiste en Excel</option>
-                    <option value="web">Développeur Web</option>
-                    <option value="assistance technique">Technicien IT</option>
-                    <option value="autre">Autre</option>
-                </select>
-            </div>
-
-            <div class="contact__form__container">
-                <label>Ajouter des détails :</label>
-                <textarea rows="7" name="message" placeholder="Message"></textarea>
-            </div>
-
-            <div class="contact__form__container">
-                <input type="checkbox" id="appel_moi" name="appel_moi" value="1" checked>
-                <label for="appel_moi">Vous pouvez m'appeler au téléphone</label>
-            </div>
-
-            <div class="contact__form__container">
-                <button type="submit" name="envoyer" class="btn btn--orange contact__form__btn">Envoyer</button>
-            </div>
-
-        </form>
+    <section class="wrapper align-center" style="padding-top: 80px; padding-bottom: 80px;">
+        <p style="margin-bottom: 35px; color: #4caf50;">Votre message a été envoyé avec succès.</p>
+        <a href="#" class=" btn btn--orange" onclick="window.history.back()">Retour</a>
     </section>
 
 
