my second commit of 17-04-2024

--- a/contact/index.html
+++ b/contact/index.html
@@ -85,6 +85,7 @@
 
                                     <input type="hidden" name="_next" value="https://guidigit.com/contact/message-envoye.html">
                 <input type="hidden" name="_subject" value="Clients">
+                <input type="hidden" name="_captcha" value="false">
 
                 <div class="contact__form__container">
                     <label for="prenom">Votre Prénom :</label>
