the third commit today, 23-04-2024

--- a/404.html
+++ b/404.html
@@ -1,192 +1,133 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
+    <meta name="author" content="GuiDigit">
 
-    <meta name="keywords" content="Médias Sociaux, Marketing Social, Marketing Digital, Marketing Social en Guinée">
-    <meta name="description" content="Gestion et Campagne Médias Sociaux en Guinée. Faites votre marketing sur Facebook, Twitter, Instagram, LinkedIn avec GuiDigit">
-
-
-
+    <meta property="og:title" content="Vie privée - Guidigit" />
+    <meta property="og:description" content="Vie privée - Guidigit" />
+    <meta property="og:url" content="https://www.guidigit.com/privacy.html"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:site_name" content="GuiDigit" />
+    <meta property="og:image" content="./assets/home-guidigit-og.jpg" />
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="630"/>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@guidigit" />
     <meta name="twitter:creator" content="@guidigit" />
+    <meta property="twitter:title" content="Vie privée - Guidigit" />
+    <meta property="twitter:description" content="Vie privée - Guidigit" />
+    <meta property="twitter:image" content="./assets/home-guidigit-og.jpg" />
+    <meta property="twitter:url" content="https://www.guidigit.com/privacy.html"/>
 
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Marketing social en Guinée, Marketing sur Facebook, Twitter, Instagram, LinkedIn - Guidigit" />
-    <meta property="og:description" content="Gestion et la Campagne Médias Sociaux en Guinée - Gestion de vos pages sur Facebook, Twitter, Instagram, LinkedIn. Création et publication des contenus" />
-    <meta property="og:image" content="assets/images/guidigit-og.png" />
+    <link rel="shortcut icon" type="image/png" href="./assets/guidigit-favicon-192.png">
+    <link rel="shortcut icon" sizes="192x192" href="./assets/guidigit-favicon-192.png">
+    <link rel="apple-touch-icon" href="./assets/guidigit-favicon-192.png">
 
-    <link rel="shortcut icon" type="image/png" href="assets/images/icons/favicon-192.png">
-    <link rel="shortcut icon" sizes="192x192" href="assets/images/icons/favicon-192.png">
-    <link rel="apple-touch-icon" href="assets/images/icons/favicon-192.png">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
 
-    <title>Marketing sur les réseaux sociaux Guinée | Guidigit.com</title>
+    <link rel="stylesheet" href="./styles/styles.css">
 
-
-    <link rel="stylesheet" href="assets/css/custom-css.css">
-
+    <title>Vie Privée | Guidigit.com</title>
 
 </head>
 
 <body>
 
-    <div class="container-fluid bg-dark">
-        <div class="container text-white">
-            <div class="row py-3">
-                <div class="col px-0">
-                    Le marketing et la gestion des réseaux sociaux en Guinée
-                </div>
-                <div class="col px-0 text-right">
-                    <img src="assets/images/icons/call-100.png" height="20" alt="">
-                    <span class="ml-2">Appel : +224 629 37 35 30</span>
-                </div>
-            </div>
+    <header class="wrapper header">
+        <a class="header__logo" href="./">
+            <img src="./assets/logo-guidigit.png" alt="GuiDigit logo" class="header__logo-img">
+        </a>
+        <div class="header__nav-menu" id="header__nav-menu">
+            <div class="header__nav-menu-icon header__nav-menu-icon--t" id="header__nav-menu-icon--t"></div>
+            <div class="header__nav-menu-icon header__nav-menu-icon--m" id="header__nav-menu-icon--m"></div>
+            <div class="header__nav-menu-icon header__nav-menu-icon--b" id="header__nav-menu-icon--b"></div>
         </div>
+        <nav class="header__nav" id="header__nav">
+            <ul class="header__nav-bar" id="header__nav-bar">
+                <li class="header__nav-item">
+                    <a href="./formations/" class="header__nav-link">Formations</a>
+                </li>
+                <li class="header__nav-item">
+                    <a href="./services/" class="header__nav-link">Services</a>
+                </li>
+                <li class="header__nav-item">
+                    <a href="./blog/" class="header__nav-link">Blog</a>
+                </li>
+                <li class="header__nav-item">
+                    <a href="./contact/" class="header__nav-link header__nav-link--contact header__nav-link--contact--lg">Contact</a>
+                </li>
+            </ul>
+        </nav>
+</header>
+
+<section class="wrapper blog">
+    <div class="blog__wait-post">
+        <h4 class="blog__wait-post__title">404! Page non trouvée</h4>
+        <img src="./assets/blog-wait-first-post-guidigit.png" alt="" class="blog__wait-post__img">
     </div>
+</section>
 
-    <header class="container-fluid">
-        <div class="container">
-            <div class="row">
-                <div class="col px-0">
-                    <nav class="navbar navbar-expand-lg py-3">
-                        <div class="d-inline">
-                            <a href="/">
-                                <img src="assets/images/logo-inverse.png" width="40" height="40" alt="Marketing digital en Guinée">
-                            </a>
-                        </div>
-                        <div class="d-inline d-flex flex-column pl-2 ml-0" style="line-height:120%;">
-                            <a class="navbar-brand text-white pb-0" href="/">
-                      GuiDigit.com
-                </a>
-                            <small class="text-white pt-0">
-                    Gestion des Médias <br class="d-sm-none" /> Sociaux en Guinée
-                    </small>
-                        </div>
-
-                        <button class="navbar-toggler ml-auto shadow-none p-0" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                  <img src="assets/images/icons/navicon.png" height="40" width="40" alt="">
-                </button>
-
-                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                            <ul class="navbar-nav ml-auto">
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" href="services-medias-sociaux.php">
-                        NOS SERVICES
-                      </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" href="nous-contacter.php">
-                        CONTACT
-                      </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
+    <footer class="footer wrapper">
+        <div class="footer__top">
+            <div class="footer__top__item footer__top__item--first">
+                <h4 class="footer__title">GuiDigit</h4>
+                <p>Nous sommes des acteurs de la Transformation digitale aidant au renforcement de capacité de vos employés.</p>
+            </div>
+            <div class="footer__top__item footer__top__item--middle">
+                <h4 class="footer__title">Liens utils</h4>
+                <ul class="footer__top__links">
+                    <li><a href="./blog/">Blog</a></li>
+                    <li><a href="./services/">Services</a></li>
+                    <li><a href="./contact/carriere.html">Carriere</a></li>
+                    <li><a href="./contact/">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer__top__item footer__top__item--last">
+                <h4 class="footer__title">Nous Trouver</h4>
+                <ul class="footer__top__social">
+                    <li>
+                        <a href="https://www.facebook.com/guidigit" class="" target="_blank"><img src="./assets/icons/facebook-f-white.png" alt="Facebook"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/guidigit/" class="" target="_blank"><img src="./assets/icons/instagram-white.png" alt="Instagram"></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/guidigit" class="" target="_blank"><img src="./assets/icons/twitterx-white.png" alt="X"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/company/guidigit" class="" target="_blank"><img src="./assets/icons/linkedin-white.png" alt="Linkedin"></a>
+                    </li>
+                </ul>
+                <ul class="footer__top__contact">
+                    <li>
+                        <img src="./assets/icons/phone-white.png" alt=""><span>+224 610 382 265</span>
+                    </li>
+                    <li>
+                        <img src="./assets/icons/mail-white.png" alt=""><span>hello@guidigit.com</span>
+                    </li>
+                    <li>
+                        <img src="./assets/icons/home-white.png" alt=""><span>Lambanyi, Ratoma - Conakry, Guinée</span>
+                    </li>
+                </ul>
             </div>
         </div>
-    </header>
 
-    <main class="container-fluid d-flex">
-        <div class="mx-auto my-5">
-            <h3 class="my-5">Page non trouvée | 404</h3>
+        <div class="footer__bottom">
+            <div>
+                <p>Copyright &copy; 2022 GuiDigit. Tout droit réservé.</p>
+            </div>
+            <div>
+                <a href="privacy.html">Vie Privee</a>
+            </div>
         </div>
-    </main>
-
-    <footer class="py-4 mt-5 py-md-5 container-fluid">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-12 col-md-4 text-white mb-3">
-                    <h3>GuiDigit</h3>
-                    <div>
-                        <ul class="list-unstyled">
-                            <li class="mb-2">
-                                <a href="services-medias-sociaux.php" class="text-white">
-                  Nos services
-                </a>
-                            </li>
-                            <li class="mb-2">
-                                <a href="nous-contacter.php" class="text-white">
-                  Nous contacter
-                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-8">
-                    <div class="row">
-
-                        <div class="col-12 col-lg-6 text-white mb-3">
-                            <h3>Contacts</h3>
-                            <div>
-                                <img src="assets/images/icons/call-100.png" height="20" alt="">
-                                <span class="ml-2">Appel : +224 629 37 35 30</span>
-                            </div>
-
-                            <div class="mt-2">
-                                <img src="assets/images/icons/mail.png" height="17" alt="">
-                                <span class="ml-2">Email : hello@guidigit.com</span>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-lg-6 text-white mb-3">
-                            <h3>Aimez nous!</h3>
-                            <a href="https://www.facebook.com/guidigit">
-                                <img src="assets/images/icons/facebook-follow.png" width="40" height="40" alt="Nous suivre sur Facebook" title="Nous suivre sur Facebook" />
-                            </a>
-                            <a href="https://twitter.com/guidigit">
-                                <img src="assets/images/icons/twitter-follow.png" width="40" height="40" alt="Nous suivre sur Twitter" title="Nous suivre sur Twitter" />
-                            </a>
-
-                            <a href="https://www.linkedin.com/company/guidigit">
-                                <img src="assets/images/icons/linkedin-follow.png" width="40" height="40" alt="Nous suivre sur LinkedIn" title="Nous suivre sur LinkedIn" />
-                            </a>
-
-                            <a href="https://www.instagram.com/guidigit/">
-                                <img src="assets/images/icons/instagram-follow.png" width="37" height="37" alt="Nous suivre sur Instaram" title="Nous suivre sur Instagram" />
-                            </a>
-
-                            <a href="https://www.pinterest.com/guidigit">
-                                <img src="assets/images/icons/pinterest-follow.png" width="40" height="40" alt="Nous suivre sur Pinterest" title="Nous suivre sur Pinterest" />
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col text-white">
-                    <h3>
-                        A Propos de GuiDigit
-                    </h3>
-                    <p>
-                        GuiDigit est une agence de Médias Sociaux à Conakry. Nous offrons les services de gestion et de campagne des Réseaux Sociaux aux Marques, aux Entreprises et aux Organisations en Guinée.
-
-                    </p>
-                </div>
-            </div>
-
-
-
-            <div class="row mt-3 pt-2 border-top border-secondary text-white">
-                <div class="col">Copyright &copy;
-                    <?php echo date("Y"); ?> GuiDigit.com. Tout droit réservé.</div>
-            </div>
-
-        </div>
-
     </footer>
 
-
-    <script>
-    </script>
+    <script type="text/javascript" src="scripts/scripts.js"></script>
 
 </body>
-
 </html>
