--- a/contact/carriere.html
+++ b/contact/carriere.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:site_name" content="GuiDigit" />
-    <meta property="og:image" content="../assets/home-guidigit-og.jpg" />
+    <meta property="og:image" content="https://i.ibb.co/Yb9yLWB/home-guidigit-og.jpg" />
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
     <meta name="twitter:card" content="summary_large_image" />
@@ -24,7 +24,7 @@
     <meta name="twitter:creator" content="@guidigit" />
     <meta property="twitter:title" content="La Transformation digitale avec Guidigit" />
     <meta property="twitter:description" content="La Transformation digitale pour une productivité optimale des employés." />
-    <meta property="twitter:image" content="../assets/home-guidigit-og.jpg" />
+    <meta property="twitter:image" content="https://i.ibb.co/Yb9yLWB/home-guidigit-og.jpg" />
     <meta property="twitter:url" content="https://www.guidigit.com/contact/carriere.html"/>
 
     <link rel="shortcut icon" type="image/png" href="../assets/guidigit-favicon-192.png">
