--- a/privacy.html
+++ b/privacy.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:site_name" content="GuiDigit" />
-    <meta property="og:image" content="./assets/home-guidigit-og.jpg" />
+    <meta property="og:image" content="https://i.ibb.co/Yb9yLWB/home-guidigit-og.jpg" />
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
     <meta name="twitter:card" content="summary_large_image" />
@@ -21,7 +21,7 @@
     <meta name="twitter:creator" content="@guidigit" />
     <meta property="twitter:title" content="Vie privée - Guidigit" />
     <meta property="twitter:description" content="Vie privée - Guidigit" />
-    <meta property="twitter:image" content="./assets/home-guidigit-og.jpg" />
+    <meta property="twitter:image" content="https://i.ibb.co/Yb9yLWB/home-guidigit-og.jpg" />
     <meta property="twitter:url" content="https://www.guidigit.com/privacy.html"/>
 
     <link rel="shortcut icon" type="image/png" href="./assets/guidigit-favicon-192.png">
