--- a/services/assistance-technique.html
+++ b/services/assistance-technique.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:site_name" content="GuiDigit" />
-    <meta property="og:image" content="../assets/home-guidigit-og.jpg" />
+    <meta property="og:image" content="https://i.ibb.co/Yb9yLWB/home-guidigit-og.jpg" />
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
     <meta name="twitter:card" content="summary_large_image" />
@@ -27,7 +27,7 @@
     <meta property="twitter:image" content="../assets/home-guidigit-og.jpg" />
     <meta property="twitter:url" content="https://www.guidigit.com/services/assistance-technique.html"/>
 
-    <link rel="shortcut icon" type="image/png" href="../assets/guidigit-favicon-192.png">
+    <link rel="shortcut icon" type="image/png" href="https://i.ibb.co/Yb9yLWB/home-guidigit-og.jpg">
     <link rel="shortcut icon" sizes="192x192" href="../assets/guidigit-favicon-192.png">
     <link rel="apple-touch-icon" href="../assets/guidigit-favicon-192.png">
 
